<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        android:onClick="gotoNext"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
        android:orientation="horizontal"
          android:background="@drawable/gradient">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:src="@drawable/northamerica"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="25dp">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Study in North America"
              android:textSize="20sp"
              android:textColor="#fff"/>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/northAmerica"
              android:textSize="15sp"
              android:textColor="#fff"/>

        </LinearLayout>

      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:background="@drawable/gradient2">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:src="@drawable/southamerica"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="25dp">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Study in South America"
              android:textSize="20sp"
              android:textColor="#fff"/>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/southAmerica"
              android:textSize="15sp"
              android:textColor="#fff"/>

        </LinearLayout>

      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:background="@drawable/gradient3">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/europe"/>
<!--            -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="25dp">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Study in Europe"
              android:textSize="20sp"
              android:textColor="#fff"/>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/Europe"
              android:textSize="15sp"
              android:textColor="#fff"/>

        </LinearLayout>

      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:background="@drawable/gradient4">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:src="@drawable/asia"
            android:layout_marginTop="10dp"/>
<!--        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="25dp">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Study in Asia"
              android:textSize="20sp"
              android:textColor="#fff"/>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/Asia"
              android:textSize="15sp"
              android:textColor="#fff"/>

        </LinearLayout>

      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        android:layout_marginBottom="10dp"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:background="@drawable/gradient5">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/australia"/>
<!--        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="25dp">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Study in Australia"
              android:textSize="20sp"
              android:textColor="#fff"/>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/Australia"
              android:textSize="15sp"
              android:textColor="#fff"/>

        </LinearLayout>

      </LinearLayout>
    </androidx.cardview.widget.CardView>

  </LinearLayout>

  </ScrollView>